--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.2.3",
+    "connect-busboy": "^1.0.0",
     "connect-pg-simple": "^4.2.1",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.6.9",
@@ -34,6 +35,7 @@
     "easy-soap-request": "^2.6.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.4.0",
     "express-rate-limit": "^2.14.2",
     "express-session": "^1.16.2",
     "helmet": "^3.21.1",
@@ -53,11 +55,16 @@
     "react-addons-create-fragment": "^0.14.7",
     "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^16.10.2",
+    "react-file-reader": "^1.1.4",
     "react-hot-loader": "^1.3.1",
     "react-keydown": "^1.9.12",
+    "react-redux": "^8.0.5",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^5.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "request": "^2.88.0",
+    "save": "^2.9.0",
     "serve-favicon": "^2.5.0",
     "should": "^11.2.0",
     "underscore": "^1.9.1",
